# mockvox

./: .env.sample  .gitattributes  .gitignore  .lfsconfig  Dockerfile  LICENSE  README.md  check-redis.sh  check_redis.sh  docker-compose.yml  generate-secrets.sh  install_0.sh  install_1.sh  nohup.out  pyproject.toml  redis.sh  startup_redis.sh
Docker/: cantoneseDownload.py  chineseDown.sh  chineseDownload.py  docker-compose.yml  english.txt  general.txt  generalDownload.py  generalDownload.sh  japanese.txt  japaneseDownload.py  korean.txt  koreanDownload.py  links.txt  startup.sh
Docker/REDIS/: docker-compose.yml  start.sh
Docker/mockvox/: docker-compose.yml  download_up.sh  englishDown.sh  japaneseDown.sh  japaneseDownload.py  korean.txt  koreanDown.sh  nomal.txt  nomalDown.sh
bot/: main.py
bot/config/: __init__.py  celery.py  config.py
bot/core/: __init__.py  asr.py  denoiser.py  slicer.py
bot/core/models/SpeechSeparation/: __init__.py
bot/frontend/: index.html
bot/frontend/font/: iconfont.json
bot/frontend/js/: app.js
bot/utils/: __init__.py  fileHandle.py  i18n.py  logger.py
bot/worker/: __init__.py  tasks.py  train_stage1.py  worker.py
docs/cn/: README.md  api.md  cli.md
docs/en/: api.md  cli.md
pretrained/alextomcat/speech_frcrn_ans_cirm_16k/: README.md
pretrained/damo/speech_frcrn_ans_cirm_16k/: .msc  .mv
redis/: entrypoint.sh  redis.conf.template
src/: __init__.py  config.py  main.py
src/bot/: main.py
src/bot/cli/: __init__.py
src/bot/config/: __init__.py  config.py  s1.json  s2.json
src/bot/core/: __init__.py  asr.py  data_process.py  dataloader.py  dataprocess.py  denoiser.py  feature_extract.py  inference.py  slicer.py  text2semantic.py  train.py
src/bot/core/models/: __init__.py
src/bot/core/models/HuBERT/: __init__.py
src/bot/engine/: __init__.py  denoiser.py  slicer.py  text2semantic.py  train.py
src/bot/engine/v2/: __init__.py  asr.py  data_process.py  denoiser.py  feature_extract.py  inference.py  slicer.py  text2semantic.py  train.py
src/bot/engine/v4/: __init__.py  asr.py  data_process.py  feature_extract.py  inference.py  text2semantic.py  train.py
src/bot/frontend/font/: iconfont.css  iconfont.js
src/bot/models/: BaseModules.py  MultiPeriodDiscriminator.py  SynthesizerTrn.py  __init__.py  attentions.py  dataset.py  loss.py  mel.py  mrte.py  quantize.py  tools.py
src/bot/models/AR/: __init__.py  t2s_model.py  utils.py
src/bot/models/AR/nn/: __init__.py  activation.py  patched_mha_with_cache.py  transformer.py
src/bot/models/HuBERT/: cnhubert.py
src/bot/models/v2/: MultiPeriodDiscriminator.py  SynthesizerTrn.py  dataset.py  t2s_model.py
src/bot/models/v4/: __init__.py  dataset.py  synthesizer.py
src/bot/nn/: __init__.py  attentions.py  base.py  mel.py
src/bot/nn/AR/: lr_schedulers.py  optim.py  scaling.py  utils.py
src/bot/nn/f5_tts/: __init__.py  dit.py
src/bot/text/: __init__.py  cantonese.py  chinese.py  english.py  japanese.py  korean.py  normalizer.py  symbols.py
src/bot/text/LangSegmenter/: langsegmenter.py
src/bot/text/en_normalization/: __init__.py
src/bot/text/g2pw/: g2pw.py  onnx_api.py
src/bot/utils/: TQDM.py  __init__.py  fileHandle.py  files.py  logger.py
src/bot/utils/locale/: en_US.json  fr_FR.json  ja_JP.json  ko_KR.json  ru_RU.json  zh_CN.json  zh_TW.json
src/bot/worker/: __init__.py  inference.py  train_stage1.py  train_stage2.py
src/config/: __init__.py  celery.py  config.py
src/core/: slice.py
src/frontend/: app.js  style.css
src/mockvox/: main.py
src/mockvox/cli/: __init__.py
src/mockvox/config/: config.py  s2.json
src/mockvox/engine/: __init__.py
src/mockvox/engine/v2/: __init__.py  asr.py  data_process.py  denoiser.py  feature_extract.py  inference.py  slicer.py  text2semantic.py  train.py
src/mockvox/engine/v4/: __init__.py  data_process.py  feature_extract.py  inference.py  text2semantic.py  train.py
src/mockvox/models/: __init__.py  cnhubert.py  model_factory.py
src/mockvox/models/v2/: MultiPeriodDiscriminator.py  SynthesizerTrn.py  __init__.py  dataset.py  t2s_model.py
src/mockvox/models/v4/: dataset.py  synthesizer.py
src/mockvox/nn/: attentions.py  base.py  mel.py  mrte.py  quantize.py
src/mockvox/nn/AR/: activation.py  transformer.py
src/mockvox/nn/f5_tts/: dit.py
src/mockvox/text/: __init__.py  cantonese.py  chinese.py  english.py  japanese.py  korean.py  normalizer.py  tone_sandhi.py
src/mockvox/text/LangSegmenter/: langsegmenter.py
src/mockvox/text/en_normalization/: expend.py
src/mockvox/text/g2pw/: onnx_api.py
src/mockvox/text/ja_userdic/: generate.py
src/mockvox/text/zh_normalization/: text_normlization.py
src/mockvox/utils/: TQDM.py  __init__.py  files.py  i18n.py  logger.py  tools.py
src/mockvox/utils/locale/: en_US.json  fr_FR.json  ja_JP.json  ko_KR.json  ru_RU.json  zh_CN.json  zh_TW.json
src/mockvox/worker/: __init__.py  inference.py  train_stage1.py  train_stage2.py  worker.py
src/utils/: logger.py
src/worker/: __init__.py  config.py  tasks.py
tests/: test_config.py  test_conn.py  test_upload.py
